# MjFileRenamer

./: CMakeLists.txt  MediaEditModel.cpp  MediaEditModel.h  MediaEditView.cpp  MediaEditView.h  README.md  filesnames.cpp  filesnames.h  filesnames.qrc  filesnames.ui  main.cpp  mainIcon.rc
